# HeXingYiKe

./: .gitignore  README.md
backend/: .gitignore  Cargo.toml  README.md
backend/src/: chat_iter.rs  kvcache.rs  main.rs  message.rs  model.rs  operators.rs  options.rs  params.rs  restful_api.rs  tensor.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: animation.less  base.less
frontend/src/: App.less  App.tsx  index.less
frontend/src/components/: ChatArea.tsx  ChatBoard.less  ChatBoard.tsx  SelectNav.tsx
frontend/src/fetch/: config.ts
frontend/src/stores/: history.ts  session.ts
frontend/src/utils/: time.ts
model/: model.safetensors
wasmend/: Cargo.toml  LICENSE_MIT
wasmend/src/: kvcache.rs  lib.rs  main.rs  model.rs
