[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
safetensors = "0.4.3"
tokenizers = "0.19.1"
rand = "0.8"
log = "0.4.22"
uuid = { version = "0.8", features = ["serde", "v4"] }
once_cell = "1.20"
ws = { package = "rocket_ws", version = "0.1.1" }
