[package]
name = "wasmend"
version = "0.1.0"
authors = ["Leo Cheng <chengkelfan@qq.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
safetensors = "0.4.3"
tokenizers = "0.19.1"
rand = "0.8"
log = "0.4.22"
uuid = { version = "0.8", features = ["serde", "v4"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[dependencies.getrandom]
version = "0.2.15"
features = ["js"]